<resources>
    <string name="app_name">Doujin-moe</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_retry">重试</string>
    <string name="action_download">下载</string>
    <string name="action_check">查看</string>

    <string name="title_newest">最新</string>
    <string name="title_best">排行榜</string>
    <string name="title_artist">作者</string>
    <string name="title_downloaded">已下载</string>
    <string name="text_newest_get_fail">取得 最新漫画 失败.</string>
    <string name="text_best_get_fail">取得 排行榜 失败.</string>
    <string name="text_artist_get_fail">取得 作者版块 失败.</string>
    <string name="text_category_get_fail">取得 类别版块 失败.</string>
    <string name="text_abc_get_fail">取得 名称版块 失败.</string>
    <string name="text_search_get_fail">取得 检索版块 失败.</string>
    <string name="text_downloaded_get_fail">取得 已下载书籍 失败.</string>
    <string name="title_activity_details">书籍详细</string>
    <string name="refresh_fail">刷新数据失败.</string>
    <string name="title_activity_gallery">图库</string>
    <string name="info_total_pages">%1$d/%2$d</string>
    <string name="download_book_success">书籍 %s 下载成功.</string>
    <string name="download_book_fail">书籍 %s 下载失败.</string>
    <string name="action_bookmark">书签</string>
    <string name="title_activity_download_manager">下载管理</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="download_manage">下载管理</string>
    <string name="wait_for_download">等待下载</string>
    <string name="fragment_downloading_title">下载中</string>
    <string name="fragment_download_success_title">下载完成</string>
    <string name="fragment_download_fail_title">下载失败</string>
    <string name="text_cancel_download">是否取消下载?</string>
    <string name="action_cancel">取消</string>
    <string name="text_retry_download">是否重新下载?</string>
    <string name="text_book_delete">是否删除书籍 %s .</string>
    <string name="action_delete">删除</string>
    <string name="title_category">类别</string>
    <string name="title_abc">名称</string>
    <string name="title_search">检索</string>
</resources>
