<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_newest"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/title_newest"/>
        <item
            android:id="@+id/nav_best"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/title_best"/>
        <item
            android:id="@+id/nav_artist"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/title_artist"/>
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/title_category"/>
        <item
            android:id="@+id/nav_abc"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/title_abc"/>
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/title_search"/>
        <item
            android:id="@+id/nav_downloaded"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/title_downloaded"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_download_manage"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/download_manage"/>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send"/>
        </menu>
    </item>

</menu>
